--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,11 @@ services:
       - db
 
   db:
-    image:  postgres
-    environment:
-      - 'POSTGRES_USER=postgres'
-      - 'POSTGRES_PASSWORD=postgres'
+    image: postgres:15-bullseye
+    #environment:
+      #- 'POSTGRES_USER=postgres'
+      #- 'POSTGRES_PASSWORD=postgres'
     volumes:
       - 'db-data:/var/lib/postgresql/data'
+    environment:
+      - 'POSTGRES_HOST_AUTH_METHOD=true'
