--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - db
 
   db:
-    image: postgres:15-bullseye
+    image: postgres
     #environment:
       #- 'POSTGRES_USER=postgres'
       #- 'POSTGRES_PASSWORD=postgres'
